adds explanation of the algorithm

--- a/views/selection_sort.erb
+++ b/views/selection_sort.erb
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Selection Sort</h1>
-    <h3 id='steps'></h3>
+    <div class="explanation">
+      <p class="text_left">1. Find the minimum value of the set</p>
+      <p class="text_left">2. Swap that minimum value with the first element of the set</p>
+      <p class="text_left">3. Repeat for remainder of the set</p>
+    </div>
     <div id="canvas">
       <canvas id="selection_sort" width="800" height="400" style="margin-top: 20px;">Your browser does not support HTML5 :(</canvas>
   </body>
