--- a/public/css/selection_sort.css
+++ b/public/css/selection_sort.css
@@ -22,3 +22,17 @@ h3 {
 #steps {
   height: 25px;  
 }
+.explanation {
+  width: 700px;
+  margin: auto;
+}
+
+.text_right {
+  text-align: right;
+  margin-right: 88px;
+}
+
+.text_left {
+  text-align: left;
+  margin-left: 88px;
+}
